<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".SdkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/serviceConnectBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="190dp"
            android:text="@string/connect_service"
            app:layout_constraintBottom_toTopOf="@+id/connectScannerRegularBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/connectScannerRegularBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="124dp"
            android:text="@string/pair_scanner"
            app:layout_constraintBottom_toTopOf="@+id/loadProductsBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceConnectBtn" />

        <Button
            android:id="@+id/startReadingsBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="181dp"
            android:layout_marginEnd="181dp"
            android:text="@string/start_process"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loadProductsBtn" />

        <Button
            android:id="@+id/loadProductsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="122dp"
            android:layout_marginEnd="119dp"
            android:text="@string/list_data"
            app:layout_constraintBottom_toTopOf="@+id/startReadingsBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connectScannerRegularBtn" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/connectScannerBtnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="38dp"
            app:layout_constraintBottom_toTopOf="@+id/serviceConnectBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_sensorville" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>